--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,70 +9,81 @@
 
     <TextView
         android:id="@+id/tvSide"
-        app:layout_anchor="@id/boardView"
-        app:layout_anchorGravity="center_horizontal"
-        android:translationY="-36dp"
-        android:textAppearance="?attr/textAppearanceSubtitle2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceSubtitle2"
+        android:translationY="-36dp"
+        app:layout_anchor="@id/boardView"
+        app:layout_anchorGravity="center_horizontal" />
 
     <com.heshten.chess.ui.views.BoardView
         android:id="@+id/boardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="76dp"
         android:layout_marginHorizontal="36dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnUndo"
+        style="?attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Undo"
+        android:textAppearance="?attr/textAppearanceSubtitle2"
+        android:translationY="36dp"
+        app:layout_anchor="@id/boardView"
+        app:layout_anchorGravity="bottom|center_horizontal" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/menuSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/bottom_sheet_behavior"
-        android:background="@drawable/bg_menu">
+        android:background="@drawable/bg_menu"
+        app:layout_behavior="@string/bottom_sheet_behavior">
 
         <View
             android:id="@+id/pimpView"
             android:layout_width="72dp"
+            android:layout_height="4dp"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:background="@drawable/shape_menu_pimp"
-            android:layout_height="4dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnNewGameWhite"
-            android:text="Start New Game White"
+            style="?attr/materialButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?attr/materialButtonStyle"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Start New Game White"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/pimpView" />
 
         <Button
             android:id="@+id/btnNewGameBlack"
-            android:text="Start New Game Black"
+            style="?attr/materialButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?attr/materialButtonStyle"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Start New Game Black"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnNewGameWhite" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="24dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnNewGameBlack" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
